--- a/src/components/commons/Header/Header.module.css
+++ b/src/components/commons/Header/Header.module.css
@@ -18,13 +18,14 @@
 
 .divTitle {
   width: 70%;
+  display: flex;
+  justify-content: center;
+  padding-top: 0.3rem;
 }
 
 .title {
   color: var(--white-text-color);
   text-align: center;
-  margin: 0;
-  margin-top: 0.65rem;
   font-size: 2.2rem;
   font-family: Avengeance Heroic Avenger Bold Italic;
 }
