fixed font footer

--- a/src/components/commons/Footer/Footer.module.css
+++ b/src/components/commons/Footer/Footer.module.css
@@ -18,6 +18,7 @@
 .team {
   color: var(--white-text-color);
   margin: 0;
+  font-family: Aquawax Medium Trial;
 }
 
 .divCopyright {
@@ -33,4 +34,6 @@
 
 .copyrightText {
   margin: 0;
+  font-family: Aquawax Medium Trial;
+  margin-right: 0.3rem;
 }
