--- a/src/components/views/Product.module.css
+++ b/src/components/views/Product.module.css
@@ -7,3 +7,27 @@
         .content {
             margin-top: 40px;
         }
+        
+        .align {
+            display: flex;
+            justify-content: center;
+        }
+        
+        .column {
+            display: flex;
+            align-items: center;
+        }
+        
+        .redbutton {
+            background-color: var(--red-background-color);
+            color: white;
+            border-radius: 20px;
+            width: 200px;
+            height: 50px;
+        }
+        
+        .list {
+            margin: 20px;
+            display: flex;
+            justify-content: center;
+        }
