--- a/src/components/commons/Footer/Footer.module.css
+++ b/src/components/commons/Footer/Footer.module.css
@@ -1,8 +1,7 @@
 .footer {
   background-color: var(--red-background-color);
   bottom: 0;
-  position: absolute;
-  bottom: 0;
+  position: relative;
   width: 100%;
   height: 3.5rem;
   display: flex;
