--- a/src/components/views/Cart/CardPowerCart.module.css
+++ b/src/components/views/Cart/CardPowerCart.module.css
@@ -7,7 +7,7 @@
 .container {
     background-color: var(--gray-background-color);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     box-shadow: 5px 5px 5px var(--gray-background-color);
 }
   
@@ -26,10 +26,10 @@
 }
 
 .img {
-    align-self: flex-start;
     height: 8rem;
     width: 8rem;
-    margin-right: 0.5rem;
+    object-fit: cover;
+    margin: 0.5rem;
 }
   
 .button {
