--- a/src/components/commons/Power/Power.module.css
+++ b/src/components/commons/Power/Power.module.css
@@ -6,3 +6,15 @@
   justify-content: space-around;
 }
 
+@media (max-width: 768px) {
+  .Power {
+    margin-top: 5rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column
+  }
+}
+
+
+
+
