--- a/src/components/commons/Power/CardPowerCart.module.css
+++ b/src/components/commons/Power/CardPowerCart.module.css
@@ -8,15 +8,12 @@
     background-color: var(--gray-background-color);
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     box-shadow: 5px 5px 5px var(--gray-background-color);
 }
   
 .title {
     text-align: center;
-}
-  
-.price {
-    align-self: flex-end;
 }
   
 .containerImg {
@@ -31,11 +28,38 @@
     object-fit: cover;
     margin: 0.5rem;
 }
-  
+ 
+.containerPrice {
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .button {
     align-self: flex-end;
     background: var(--red-background-color);
     color: var(--white-text-color);
     border-radius: 10%;
+    margin: 0 1rem 1rem 0;
 }
-  
+
+@media (max-width: 768px) {
+    .containerPrice {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .containerImg {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+    .title {
+        text-align: left;
+    }
+}
