--- a/src/components/views/Product.module.css
+++ b/src/components/views/Product.module.css
@@ -1,33 +1,34 @@
-        .image {
-            width: 300px;
-            height: 300px;
-            border-radius: 100%;
-        }
-        
-        .content {
-            margin-top: 40px;
-        }
-        
-        .align {
-            display: flex;
-            justify-content: center;
-        }
-        
-        .column {
-            display: flex;
-            align-items: center;
-        }
-        
-        .redbutton {
-            background-color: var(--red-background-color);
-            color: white;
-            border-radius: 20px;
-            width: 200px;
-            height: 50px;
-        }
-        
-        .list {
-            margin: 20px;
-            display: flex;
-            justify-content: center;
-        }
+.image {
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+}
+
+.content {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.align {
+  display: flex;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  align-items: center;
+}
+
+.redbutton {
+  background-color: var(--red-background-color);
+  color: white;
+  border-radius: 20px;
+  width: 200px;
+  height: 50px;
+}
+
+.list {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+}
